##-- MAKE FRAGMENT FOR AMOS RULES
include $(top_srcdir)/config/amos.mk


##-- TO BE INSTALLED
dist_doc_DATA = \
	AMOScmp.README \
	runAmos.README \
	libAMOS_quickref.rtf \
	message_grammar.rtf \
	message_types.rtf \
	minimus.README \
    Foundationspec.rtf \
    helptextspec.rtf \
    portability.README \
    tarchive2amos.testplan 


##-- END OF MAKEFILE --##
