##-- SUBDIRS TO RECURSE
SUBDIRS =

if BUILD_all
SUBDIRS += \
	GNU \
	AMOS \
	Common \
	Graph \
	Slice \
	CelMsg \
	Message \
	Bank \
	Align \
        Tigger \
	Compare \
	Bambus \
	Casm \
	CtgTrim \
	Sim \
	Validation \
	Converters \
	Utils \
	PerlModules \
	Pipeline \
	Staden
if BUILD_QT
SUBDIRS += \
	bankViewer
endif BUILD_QT
endif BUILD_all

if BUILD_AMOScmp
SUBDIRS += \
	GNU \
	AMOS \
	Common \
	Slice \
	CelMsg \
	Message \
	Bank \
	Align \
	Casm \
	Converters \
	Utils \
	PerlModules \
	Pipeline
endif BUILD_AMOScmp

if BUILD_minimus
SUBDIRS += \
	GNU \
	AMOS \
	Common \
	Graph \
	Slice \
	CelMsg \
	Message \
	Bank \
	Align \
        Tigger \
	Converters \
	Utils \
	PerlModules \
	Pipeline
endif BUILD_minimus


##-- END OF MAKEFILE --##
